# libgem

./: CMakeLists.txt
src/main/: Gem.c  Gem.h  Parser.c  Parser.cpp  Parser.h  Socket.c  Socket.h
src/test/: main.c
